[package]
name = "pi_slotmap_graph"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"
description = "dag interface."
repository = "https://github.com/GaiaWorld/pi_graph"
license = "MIT OR Apache-2.0"
keywords = ["pi", "dag", "graph"]

[dependencies]
pi_slotmap = "0.2"
graph-api-lib = { version = "0.2", package = "graph-api-lib" }
smallbox = "0.8"


[dev-dependencies]
graph-api-test = { version = "0.2", package = "graph-api-test" }
graph-api-lib = {  version = "0.2", package = "graph-api-lib" }
graph-api-simplegraph = { version = "0.2", package = "graph-api-simplegraph" }
